# ChatGroups

./: .gitignore
backend/: Pipfile  backend.nimble  pyproject.toml
backend.old/app/api/v0/: chat.py  user.py
backend.old/app/core/: auth.py  error.py
backend.old/app/database/: connection.py
backend.old/app/frontend/: package-lock.json  rollup.config.js
backend.old/app/frontend/src/components/: ManageChat.svelte  ModalContent.svelte  Nav.svelte
backend.old/app/frontend/src/routes/: Home.svelte  Login.svelte  MyChats.svelte
backend.old/app/frontend/src/schemas/: address.ts  chat.ts
backend.old/app/models/: address.py  chat.py  message.py
backend.old/app/schemas/: address.py
backend/.config/: config.json  config.production.json
backend/app/: main.py  views.py
backend/app/api/v0/: chat.py  user.py
backend/app/core/: config.py  error.py
backend/app/database/: init_db.py
backend/app/frontend/: package-lock.json  package.json  rollup.config.js
backend/app/frontend/src/api/: chat.ts  config.json  user.ts
backend/app/frontend/src/components/: App.svelte  ManageChat.svelte  ModelContent.svelte  Nav.svelte  PublicNav.svelte
backend/app/frontend/src/routes/: Home.svelte  JoinedChats.svelte  Login.svelte  MyChats.svelte  Register.svelte
backend/app/frontend/src/schemas/: user.ts
backend/app/models/: address.py  chatgroup.py  message.py  user.py
backend/app/schemas/: chat.py  user.py
backend/src/: app.nim  database.nim  models.nim  urls.nim  views.nim
frontend/public/: index.html
frontend/src/: App.svelte
