[tool.poetry]
name = "backend"
version = "0.0.0"
description = "Backend of ChatGroups"
authors = ["JYGC <jttff1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
fastapi-utils = "*"
pydantic = {extras = ["dotenv", "email"], version = "*"}
pony = "*"
psycopg2-binary = "*"
fastapi-jwt-auth = {extras = ["asymmetric"], version = "*"}
aiofiles = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
